--- a/video.html
+++ b/video.html
@@ -12,92 +12,84 @@
 <body>
     <header class="header">
         <figure class="header__figure">
-            <img class="figure__Image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Nebraska Rodriguez image">
+            <img class="figure__Image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Nebrazca Rodriguez img">
             <p class="figure__p">Nebraska Rodriguez </p>
         </figure>
-        <span class="header__span">
-            <div class="span__container">
+        <nav class="header__nav">
+            <div class="nav__container">
                 <img class="container__image" src="assets/Logos/BellOutline.svg" alt="Bell logo">
-                <a class="container__link" href="Log-in.html"><p class="container__p">Subscriptions</p></a>
+                <a class="container__link" href="Log-in.html"><p class="link__p">Subscriptions</p></a>
             </div>
-            <div class="span__container">
+            <div class="nav__container">
                 <img class="container__image" src="assets/Logos/Heart.svg" alt="Heart logo">
-                <a class="container__link" href="Log-in.html"><p class="container__p">Like</p></a>
+                <a class="container__link" href="Log-in.html"><p class="link__p">Like</p></a>
             </div>
-            <div class="span__container">
+            <div class="nav__container">
                 <img class="container__image" src="assets/Logos/Star.svg" alt="Star logo">
-                <a class="container__link" href="Log-in.html"><p class="container__p">Favorites</p></a>
+                <a class="container__link" href="Log-in.html"><p class="link__p">Favorites</p></a>
             </div>
-            <div class="span__container">
+            <div class="nav__container">
                 <img class="container__image" src="assets/Logos/Play logo.svg" alt="Play logo">
-                <a class="container__link" href="Log-in.html"><p class="container__p">Watch later</p></a>
+                <a class="container__link" href="Log-in.html"><p class="link__p">Watch later</p></a>
             </div>
-            <div class="span__container">
+            <div class="nav__container">
                 <img class="container__image" src="assets/Logos/Computer.svg" alt="Computer logo">
-                <a class="container__link" href="Log-in.html"><p class="container__p">Channels</p></a>
+                <a class="container__link" href="Log-in.html"><p class="link__p">Channels</p></a>
             </div>
-            <div class="span__container">
+            <div class="nav__container">
                 <img class="container__image" src="assets/Logos/Arrow up.svg" alt="Arrow logo">
-                <a class="container__link" href="Log-in.html"><p class="container__p">Top videos</p></a>
+                <a class="container__link" href="Log-in.html"><p class="link__p">Top videos</p></a>
             </div>
-            <div class="span__container">
+            <div class="nav__container">
                 <img class="container__image" src="assets/Logos/Fire.svg" alt="Fire logo">
-                <a class="container__link" href="Log-in.html"><p class="container__p">Fire</p></a>
+                <a class="container__link" href="Log-in.html"><p class="link__p">Fire</p></a>
             </div>
-            <figure class="span__figure">
-                <img class="figure__img" src="assets/Logos/Exit.svg" alt="Exit logo">
-                <a class="container__link" href="index.html"><p class="figure__text">Log Out</p></a>
-            </figure>
-        </span>
+            <div class="nav-container">
+                <img class="container__image" src="assets/Logos/Exit.svg" alt="Exit logo">
+                <a class="container__link" href="index.html"><p class="link__text">Log Out</p></a>
+            </div>
+        </nav>
     </header>
     <main class="main">
+        <figure class="main__figure">
+            <div class="figure__container">
+                <a class="container-link" href="">
+                    <img class="link__image-play" src="assets/Logos/Alemania.svg" alt="Play logo">
+                </a>
+                <img class="container__img" src="assets/Imagenes/Alemania.png" alt="Meet boon Alemania image">
+            </div>
+            <div class="figure-container">
+                <figcaption class="container-figcaption">Meet Bonn Alemania</figcaption>
+                <div class="container__div">
+                    <img class="div__logo" src="assets/Logos/HeartMeet.svg" alt="Heart logo">
+                    <img class="div__logo" src="assets/Logos/Dislike.svg" alt="Dislike logo">
+                    <img class="div__logo-eye" src="assets/Logos/EyeOutline.svg" alt="EyeOutline logo">
+                    <p   class="div__text">1B</p>
+                </div>
+            </div>
+            <figcaption class="container__figcaption">By Alberto Ayala at 2017-11-13</figcaption>
+        </figure>
         <article class="main__article">
-            <figure class="article__figure">
-                <img
-                    class="figure__Play__logo" 
-                    src="assets/Logos/Alemania.svg" alt="play logo">
-                <img
-                    class="figure-meetnumber__logo" 
-                    src="assets/Logos/1B.svg" alt="number logo">
-                <img
-                    class="figure-meeteye__logo"
-                     src="assets/Logos/EyeOutline.svg" alt="eye logo">
-                <img
-                     class="figure-meetdislike__logo"
-                      src="assets/Logos/Dislike.svg" alt="dislike logo">
-                <img
-                    class="figure-meetheart__logo" 
-                    src="assets/Logos/HeartMeet.svg" alt="heart logo">
-                <img
-                    class="figure__image" 
-                    src="assets/Imagenes/Alemania.png" alt="meet bonn Alemania image">
-                <div class="figure-meet__container">
-                    <h4 class="container__title">Meet Bonn Alemania</h4>
-                    <figcaption class="container__text">By Alberto Ayala at 2017-11-13</figcaption>
-                </div>
-            </figure>
-            <figure class="article-figure">
-                <div class="figure-container">
-                    <img class="container-image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Image of coment">
-                    <p class="figure__p">Comment this video...</p>
-                </div>
-                <div class="figure__container">
-                    <img class="container-image" src="assets/Imagenes/Wooow coment img.png" alt=" Image of coment">
-                    <p class="figure__p">Wooow dude this video was awosem</p>
-                </div>
-                <div class="figure__container">
-                    <img class="container-image" src="assets/Imagenes/Love coment img.png" alt=" Image of coment">
-                    <p class="figure__p">Love it Alemania is the most beautifull country</p>
-                </div>
-                <div class="figure__container">
-                    <img class="container__img" src="assets/Imagenes/Insane coment img.png" alt=" Image of coment">
-                    <p class="figure__p">This video is insane, i love when you recorting this type of videos</p>
-                </div>
-            </figure>
+            <div class="article__container">
+                <img class="div__image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Image of coment">
+                <p class="div-text">Comment this video...</p>
+            </div>
+            <div class="article-container">
+                <img class="div__image" src="assets/Imagenes/Wooow coment img.png" alt=" Image of coment">
+                <p class="div-text">Wooow dude this video was awosem</p>
+            </div>
+            <div class="article-container">
+                <img class="div__image" src="assets/Imagenes/Love coment img.png" alt=" Image of coment">
+                <p class="div-text">Love it Alemania is the most beautifull country</p>
+            </div>
+            <div class="article-container">
+                <img class="div__image" src="assets/Imagenes/Insane coment img.png" alt=" Image of coment">
+                <p class="div-text">This video is insane, i love when you recorting this type of videos</p>
+            </div>
         </article>
+        <footer class="main__footer">
+            <p class="footer__text">Development by @Diego</p>
+        </footer>
     </main>
-    <footer class="footer">
-        <p class="footer__text">Development by @Diego</p>
-    </footer>
 </body>
 </html>
