--- a/video.html
+++ b/video.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/video.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Video Video</title>
 </head>
@@ -53,7 +52,7 @@
     <main class="main">
         <figure class="main__figure">
             <div class="figure__container">
-                <a class="container-link" href="">
+                <a class="container-link" href="#">
                     <img class="link__image-play" src="assets/Logos/Alemania.svg" alt="Play logo">
                 </a>
                 <img class="container__img" src="assets/Imagenes/Alemania.png" alt="Meet boon Alemania image">
