--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/log-out.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Video Log out</title>
 </head>
@@ -29,7 +28,7 @@
         <article class="main__article">
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/welcome to mexico.png" alt="Mexico man Image">
@@ -45,7 +44,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/at the street japan.png" alt="At the street Japan image">
@@ -61,7 +60,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/firefighters save the school.png" alt="Firefighters save the school image">
@@ -77,7 +76,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/know us tonight.png" alt="Know us tonight image">
@@ -93,7 +92,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/yuki in japan.png" alt="Yuki in Japan image">
@@ -109,7 +108,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/colombian sausages.png" alt="Colombian sausages image">
@@ -125,7 +124,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/meet bonn alemania.png" alt="Meet boon Alemania image">
@@ -141,7 +140,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/know us tonight.png" alt="Know us tonight image">
@@ -157,7 +156,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/meet bonn alemania.png" alt="Meet boon Alemania image">
@@ -173,7 +172,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/colombian sausages.png" alt="Colombian sausages image">
@@ -189,7 +188,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/at the street japan.png" alt="At the street Japan image">
@@ -205,7 +204,7 @@
             </figure>
             <figure class="article__figure">
                 <div class="figure__container">
-                    <a class="container-link" href="video.html">
+                    <a class="container-link" href="#">
                         <img class="link__image-play" src="assets/Logos/PlayOutline.svg" alt="Play logo">
                     </a>
                     <img class="container-image" src="assets/Imagenes/yuki in japan.png" alt="Yuki in Japan image">
