--- a/video.html
+++ b/video.html
@@ -69,10 +69,10 @@
             <figcaption class="container__figcaption">By Alberto Ayala at 2017-11-13</figcaption>
         </figure>
         <article class="main__article">
-            <div class="article__container">
-                <img class="div__image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Image of coment">
-                <p class="div-text">Comment this video...</p>
-            </div>
+            <form class="article__form">
+                <img class="form__image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Nebraska Rodriguez image">
+                <input class="form__controls" type="text" id="iname" placeholder="Comment this video...">
+            </form>
             <div class="article-container">
                 <img class="div__image" src="assets/Imagenes/Wooow coment img.png" alt=" Image of coment">
                 <p class="div-text">Wooow dude this video was awosem</p>
