--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <figure class="header__figure">
-            <img class="figure__Image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Nebrazca Rodriguez img">
+            <img class="figure__Image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Nebrazca Rodriguez image">
             <p class="figure__p">Nebraska Rodriguez </p>
         </figure>
         <nav class="header__nav">
