--- a/Log-in.html
+++ b/Log-in.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header class="header">
-        <figure class="header__figure">
-            <img class="figure__Image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Nebrazca Rodriguez img">
-            <p class="figure__p">Nebraska Rodriguez </p>
-        </figure>
         <nav class="header__nav">
+            <figure class="nav__figure">
+                <img class="figure__Image" src="assets/Imagenes/Nebraska Rodriguez.png" alt="Nebrazca Rodriguez img">
+                <p class="figure__p">Nebraska Rodriguez </p>
+            </figure>
             <div class="nav__container">
                 <img class="container__image" src="assets/Logos/BellOutline.svg" alt="Bell logo">
                 <a class="container__link" href="Log-in.html"><p class="link__p">Subscriptions</p></a>
@@ -43,11 +43,11 @@
                 <img class="container__image" src="assets/Logos/Fire.svg" alt="Fire logo">
                 <a class="container__link" href="Log-in.html"><p class="link__p">Fire</p></a>
             </div>
-            <div class="nav-container">
-                <img class="container__image" src="assets/Logos/Exit.svg" alt="Exit logo">
-                <a class="container__link" href="index.html"><p class="link__text">Log Out</p></a>
-            </div>
         </nav>
+        <div class="header__container">
+            <img class="container__image" src="assets/Logos/Exit.svg" alt="Exit logo">
+            <a class="container__link" href="index.html"><p class="link__text">Log Out</p></a>
+        </div>
     </header>
     <main class="main">
         <article class="main__article">
